# infant-detection-dataset

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  process.py  requirements.txt
data/: combine.py
data/real_camera_baby_doll/: 0000.json  0001.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0029.json  0030.json  0031.json  0032.json
data/stable_diffusion_1/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json
data/stable_diffusion_2/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  (+39 more)
data/train/0/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json
data/train/1/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  (+48 more)
data/val/: 3d0785a5-0238-4a7d-a832-50227f43358f.json  4ea8d908-a483-4ec9-bc10-2fdd5a8b6818.json  5115ed47-32e9-4cad-a1d1-3ebbe2872b36.json  62b75df3-9b24-442c-9ae6-88576fede99e.json  7ff73aed-c345-4baa-8211-6ec5aee4d4ff.json  8595d243-e9c6-4f5a-9408-f76a4759a2fb.json  893ed7da-575b-488a-8eed-248329f0699d.json  8ad0f267-7b8b-4060-a6ab-f53f9b99a025.json  9860c07d-2ec4-486a-b9f6-66cf0996a260.json  9bbd898d-67ab-44af-91a1-ef6fa095c85a.json  af5be8fd-9897-415a-9623-ede3096874b1.json  d661f810-b4cc-4152-8a83-ce4d5b5fa69e.json  d9a082df-4bfd-4b3b-b87b-b4b063012b16.json  ec819092-a3a1-4dcb-84bf-10112788cf5b.json  f0739a3a-1557-4524-b7a2-f5ba9de4db2a.json  f3dec238-55fe-4710-886d-86596ece77ad.json
include/cradle/: exceptions.h  generator.h  obj_model.h  renderer.h
spawn/: baby.stl  camera.stl  light.stl
src/: build_dataset.py  cabinet_generator.cpp  cabinet_generator.h  dataset.py  exceptions.h  generator.cpp  generator.h  main.cpp  net.py  obj_class.h  obj_lexer.cpp  obj_lexer.h  obj_lexer_test.cpp  obj_model.cpp  obj_model.h  obj_parser.cpp  obj_parser.h  obj_parser_test.cpp  path_tracer.cpp  path_tracer.h  renderer.cpp  renderer.h  renderer_tests.cpp  room_generator.cpp  room_generator.h  scene.cpp  scene.h  stl.cpp  stl.h  train.py
textures/Wood013/: Wood013_1K-PNG.mtlx  Wood013_1K-PNG.usdc
textures/WoodFloor028/: WoodFloor028_1K-PNG.mtlx  WoodFloor028_1K-PNG.usdc
textures/paintings/: convert.sh
(+171 files in other folders)
